# swagger/swagger.json
@@ -9,7 +9,7 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "hos": "3.142.32.45:8000",
+  "host": "3.142.32.45:8000",
   "host1": "localhost:8000",
   "basePath": "/api/v1",
   "tags": [
@@ -495,7 +495,7 @@
         }
       }
     },
-    "matched_user": {
+    "/matched_user": {
       "get": {
         "description": "In this send authorization token follow with Bearer i.e (Bearer token)",
         "parameters": [
@@ -514,7 +514,7 @@
         }
       }
     },
-    "gift_list": {
+    "/gift_list": {
       "get": {
         "description": "In this send authorization token follow with Bearer i.e (Bearer token)",
         "parameters": [
